log/build_2025-03-19_18-13-51/turtlebot_dqn/stdout_stderr.log
running egg_info
writing ../../build/turtlebot_dqn/turtlebot_dqn.egg-info/PKG-INFO
writing dependency_links to ../../build/turtlebot_dqn/turtlebot_dqn.egg-info/dependency_links.txt
writing entry points to ../../build/turtlebot_dqn/turtlebot_dqn.egg-info/entry_points.txt
writing requirements to ../../build/turtlebot_dqn/turtlebot_dqn.egg-info/requires.txt
writing top-level names to ../../build/turtlebot_dqn/turtlebot_dqn.egg-info/top_level.txt
reading manifest file '../../build/turtlebot_dqn/turtlebot_dqn.egg-info/SOURCES.txt'
writing manifest file '../../build/turtlebot_dqn/turtlebot_dqn.egg-info/SOURCES.txt'
running build
running build_py
copying turtlebot_dqn/dqn_node.py -> /home/asad/turtlebot0/build/turtlebot_dqn/build/lib/turtlebot_dqn
running install
running install_lib
copying /home/asad/turtlebot0/build/turtlebot_dqn/build/lib/turtlebot_dqn/dqn_node.py -> /home/asad/turtlebot0/install/turtlebot_dqn/lib/python3.10/site-packages/turtlebot_dqn
byte-compiling /home/asad/turtlebot0/install/turtlebot_dqn/lib/python3.10/site-packages/turtlebot_dqn/dqn_node.py to dqn_node.cpython-310.pyc
  File "/home/asad/turtlebot0/install/turtlebot_dqn/lib/python3.10/site-packages/turtlebot_dqn/dqn_node.py", line 140
    plot_path = os.path.expanduser('~/turtlebplot_path = os.path.expanduser('~/turtlebot0/dqn_training_plot.png')
                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 140)

running install_data
running install_egg_info
removing '/home/asad/turtlebot0/install/turtlebot_dqn/lib/python3.10/site-packages/turtlebot_dqn-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/turtlebot_dqn/turtlebot_dqn.egg-info to /home/asad/turtlebot0/install/turtlebot_dqn/lib/python3.10/site-packages/turtlebot_dqn-0.0.0-py3.10.egg-info
running install_scripts
Installing bumper_reset_node script to /home/asad/turtlebot0/install/turtlebot_dqn/lib/turtlebot_dqn
Installing dqn_node script to /home/asad/turtlebot0/install/turtlebot_dqn/lib/turtlebot_dqn
writing list of installed files to '/home/asad/turtlebot0/build/turtlebot_dqn/install.log'
